--- a/main.html
+++ b/main.html
@@ -7,6 +7,30 @@
 </head>
 
 <body>
+	<body>
+    <div id="app">
+        <div class="vid-container">
+            <video id="meditation-video" loop>
+                <source src="Sounds/beach.mp4" type="video/mp4">
+            </video>
+        </div>
+        
+        <div class="player-container">
+            <div class="sound-picker">
+                <button id="beach-sound">🌊 Beach</button>
+                <button id="rain-sound">🌧️ Rain</button>
+            </div>
+
+            <div class="time-display">10:0</div>
+            <button class="play">▶️</button>
+
+            <div class="time-options">
+                <button id="smaller-mins">2 Minutes</button>
+                <button id="medium-mins">5 Minutes</button>
+                <button id="long-mins">10 Minutes</button>
+            </div>
+        </div>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
